fix z-index of the portfolio background

--- a/src/components/hero/index.scss
+++ b/src/components/hero/index.scss
@@ -61,7 +61,7 @@ $_footer-height: 90px;
                 content: '';
                 display: block;
                 position: absolute;
-                z-index: 1;
+                z-index: -1;
                 left: 50%;
                 top: 50%;
                 transform: translate(-50%, -50%);
